<resources>
    <string name="app_name">ParkingChallenge</string>
    <string name="plate_number">Número da placa:</string>
    <string name="confirm_parking">Confirmar entrada</string>
    <string name="payment">Pagamento</string>
    <string name="parking_out">Saída</string>
    <string name="show_history">Ver histórico</string>
    <string name="registering">Registrando…</string>
    <string name="registered">Registrado!</string>
    <string name="plate">Placa %s</string>
    <string name="payment_label">Pagamento</string>
    <string name="time_label">Tempo Total</string>
    <string name="loading">Carregando…</string>
</resources>