<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="46dp">

    <TextView
        android:id="@+id/plate_input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        android:text="@string/plate_number"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:id="@+id/plate_input_layout"
        android:layout_width="match_parent"
        app:placeholderText="AAA-0000"
        app:placeholderTextColor="@color/lighter_gray_2"
        app:placeholderTextAppearance="@style/PlaceholderStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plate_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:maxLength="8"
            android:inputType="textCapCharacters|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/ButtonStyle.ParkingOut"
        android:id="@+id/payment_button"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/payment" />

    <Button
        style="@style/ButtonStyle.ParkingOut.Outline"
        android:id="@+id/parking_out_button"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:text="@string/parking_out" />

    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/history_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_history" />
</LinearLayout>